welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:58: error: value =! is not a member of Int
					if(etat =! nbColonne()){
                                                ^